plugins {
    id 'com.android.application'
}

android {
    testOptions {
        unitTests.all {
            jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
        }
    }
    allprojects {
        gradle.projectsEvaluated {
            tasks.withType(JavaCompile) {
                options.compilerArgs << "-Xlint:deprecation"
            }
        }
    }

    compileSdkVersion 33

    defaultConfig {
        applicationId "com.manager.techno"
        minSdk 21
        targetSdkVersion 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    buildFeatures {
        viewBinding = true
        dataBinding = true

        // for view binding:
        // viewBinding = true
    }
//    viewBinding {
//        enabled = true
//    }
//    dataBinding{
//        enabled = true
//    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildToolsVersion '30.0.3'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'

    //glide
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    //RxJava
    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
    // Retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
    // Bradge
    implementation 'com.nex3z:notification-badge:1.0.4'
    // Even bus
    implementation "org.greenrobot:eventbus:3.3.1"
    // Paper
    implementation 'io.github.pilgr:paperdb:2.7.2'
    // Gson
    implementation 'com.google.code.gson:gson:2.8.9'
    //LottieFiles
    implementation 'com.airbnb.android:lottie:4.2.2'
}